--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="item_count">%1$d / %2$d </string>
     <dimen name="recycler_item_spacing">5dp</dimen>
 
+    <dimen name="recycler_item_spacing_Bucket">10dp</dimen>
+
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
