--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,12 +22,22 @@
 
 
     <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="android:background">@drawable/rating_dialog_background
-        </item> <!-- Custom background color -->
-        <item name="android:windowMinWidthMajor">85%</item> <!-- Adjust dialog width -->
-        <item name="android:windowMinWidthMinor">85%</item>
-        <item name="android:windowBackground">@drawable/rating_dialog_background
-        </item> <!-- Rounded corners background -->
+        <item name="android:windowMinWidthMajor">90%</item> <!-- Adjust dialog width -->
+        <item name="android:windowMinWidthMinor">90%</item>
+        <item name="android:windowBackground">@drawable/rating_dialog_background</item> <!-- Rounded corners background -->
+    </style>
+
+
+
+
+    <!-- Custom Style for Confirm Button with Reduced Corner Radius -->
+    <style name="CustomConfirmButtonStyle">
+        <item name="cornerRadius">12dp</item> <!-- Set the desired corner radius -->
+        <item name="backgroundTint">@color/blue</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">sans-serif</item>
     </style>
 
 
